fixed scrollbars on modals and cards

--- a/src/scss/cards.scss
+++ b/src/scss/cards.scss
@@ -24,6 +24,7 @@
 		display: grid;
 		grid-template-rows: 1fr auto;
 		height: 100%;
+		overflow-y: scroll;
 		position: absolute;
 		text-align: center;
 		top: 0;
@@ -82,8 +83,8 @@
 
 	.content {
 		display: grid;
+		height: fit-content;
 		min-height: 100%;
-		overflow-y: scroll;
 		padding: 1rem;
 
 		> *:last-child {
@@ -261,6 +262,12 @@
 				}
 			}
 		}
+	}
+
+	+ footer {
+		display: flex;
+		flex-direction: row;
+		gap: 0.5rem;
 	}
 }
 
